  * by default, recipes that runtime depend on numpy will no longer depend on
    an explicit version of numpy. The old behavior is still available by
    setting the CONDA_NPY environment variable or using conda build --numpy
  * add py35 variable to selector namespace
  * improve conda-meta untracked files error message
  * fix conda build --help in Python 2

2015-07-22   1.15.0:
--------------------
  * fix conda skeleton cran --update-outdated --output-dir .
  * add argcomplete completers for recipes, --python, --numpy, --R, CRAN
    packages (with conda skeleton cran), and PyPI packages (with conda
    skeleton pypi)
  * conda develop now relinks object files on OS X (#490)
  * allow a glob for always-include-files
  * allow an extra section in meta.yaml, with free-form content (#483)
  * don't echo environment variables when building on Windows (#274)
  * add conda build --skip-existing
  * show default in help for conda skeleton --output-dir
  * add --update-outdated option to conda skeleton cran
  * skeleton: fix noarch_python option when build_comment is "#"
  * don't allow to build a package with the conda-meta directory
  * automatically remove a package of the recipe itself if it is installed as
    a build dependency
  * allow 'extra' key in meta.yaml, see #483
  * move echo command in Windows build, see #274
  * add regex to always included files, see #484
  * add strings in conda.config.non_x86_linux_machines, e.g. "ppc64le",
    as selector variables (renames armv6 to armv6l)


2015-06-29   1.14.1:
--------------------
  * add --size option to change RSA modulus length when generating RSA key
    pairs (defaults to 2048 bit)
  * make use of Crypto.Signature.PKCS1_PSS module, see #469
  * update default for CONDA_R to 3.2.0
  * manually install dependencies of recommended R packages in the
    build.sh, #457
  * fix issues when git commits have non-ASCII characters, #458
  * catch tarfile.ReadError in conda index, #460


2015-06-16   1.14.0: