@@ -7,3 +7,16 @@
 from ._version import get_versions
 __version__ = get_versions()['version']
 del get_versions
+
+# Sub commands added by conda-build to the conda command
+sub_commands = [
+    'build',
+    'convert',
+    'develop',
+    'index',
+    'inspect',
+    'metapackage',
+    'pipbuild',
+    'sign',
+    'skeleton',
+]
